@@ -1,5 +1,9 @@
 2001-04-25  Dave Peticolas  <dave@krondo.com>
 
+	* src/scm/commodity-utilities.scm: fix fixme
+
+	* src/engine/Group.c (xaccGroupGetAccount): remove pokey warning
+
 	* src/engine/gnc-transaction-xml-v2.c: read & write split action
 	field
 
